# dtgwg-zkp-tf

./: .gitignore  DRAFTING-RULES.md  Gemfile  README.md  RELEASE_NOTES_ADOPTION_SECURE_DEPLOYMENT_PAGES.md  RELEASE_NOTES_ARCHITECTURE_SECURITY_REFINEMENT.md  RELEASE_NOTES_IMPLEMENTATION_GUIDE_MATURITY.md  RELEASE_NOTES_NORMATIVE_REFERENCE_AND_CONTEXT_ALIGNMENT.md  RELEASE_NOTES_SECURITY_GUARDRAILS_AND_ASSURANCE.md  VALIDATION_REPORT.md  _config.yml  index.md  proof-of-liveness-requirements.md
.github/workflows/: conformance-harness.yml  pages.yml
_data/: learning_paths.json
_includes/: head_custom.html
_sass/color_schemes/: dtg.scss
assets/js/: mermaid-init.js
conformance-harness/: README.md  pyproject.toml
conformance-harness/examples/: mock-manifest.json
conformance-harness/src/dtgwg_zkp_conformance/: cli.py  evidence.py  manifest.py  models.py  runner.py
conformance-harness/src/dtgwg_zkp_conformance/adapters/: base.py  mock.py
conformance-harness/src/dtgwg_zkp_conformance/reporters/: json_reporter.py  markdown_reporter.py
conformance-harness/tests/: test_mock_adapter.py  test_runner.py
docs/implementation-guide/: README.md  documentation-architecture.md  (+1 more)
scripts/: build_traceability.py  validate_conformance.py  validate_conformance_harness.py  validate_deployment_profiles.py  validate_diagrams.py  validate_docs.py  validate_fixtures.py  validate_generated_counts.py  validate_links.py  validate_navigation.py  validate_operations.py  validate_security_assurance.py  validate_site_output.py  validate_style.py  validate_threat_model.py
(+221 files in other folders)
