[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dtgwg-zkp-conformance"
version = "0.1.0"
description = "Proof-system-agnostic DTGWG ZKP conformance harness"
requires-python = ">=3.10"
dependencies = ["jsonschema>=4.20"]

[project.scripts]
dtgwg-zkp-conformance = "dtgwg_zkp_conformance.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
